[ 김하연 ] 기능삭제: 수정 중 작성 취소 기능 삭제(중복 삭제)
