# routes/post.js
@@ -8,7 +8,6 @@ const Post = require('../models/posts');
 const router = express.Router();
 
 router.post('/back', cancelPost);
-router.post('/edit/back', cancelEdit);
 
 router.post('/img', upload.array('img',5), uploadImg);
 
